--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.emacs.desktop
+push*.dat
 venv
 database.sqlite
 .DS_Store
@@ -10,7 +12,7 @@ local_settings.py
 ~*
 *~
 reports
-.idea
+.idea*
 *.aux
 *.out
 *.pdf
